     This format is compatible with Bazaar 0.15 and later.
     (Martin Pool)

  FEATURES:

    * New option ``--author`` in ``bzr commit`` to specify the author of the
      change, if it's different from the committer. ``bzr log`` and
      ``bzr annotate`` display the author instead of the committer.
      (Lukáš Lalinský)

  BUG FIXES:

    * Suppress warning "integer argument expected, got float" from Paramiko,
      which sometimes caused false test failures.  (Martin Pool)

    * Fix bug in bundle 4 that could cause attempts to write data to wrong
      versionedfile.  (Aaron Bentley)

    * Diffs generated using "diff -p" no longer break the patch parser.
      (Aaron Bentley)

    * get_transport treats an empty possible_transports list the same as a non-
      empty one.  (Aaron Bentley)

    * patch verification for merge directives is reactivated, and works with
      CRLF and CR files.  (Aaron Bentley)

    * Accept ..\ as a path in revision specifiers. This fixes for example
      "-r branch:..\other-branch" on Windows.  (Lukáš Lalinský) 

    * ``BZR_PLUGIN_PATH`` may now contain trailing slashes.
      (Blake Winton, #129299)

    * man page no longer lists hidden options (#131667, Aaron Bentley)

    * ``uncommit --help`` now explains the -r option adequately.  (Daniel
      Watkins, #106726)

    * Error messages are now better formatted with parameters (such as
      filenames) quoted when necessary. This avoids confusion when directory
      names ending in a '.' at the end of messages were confused with a
      full stop that may or not have been there. (Daniel Watkins, #129791)

    * Fix ``status FILE -r X..Y``. (Lukáš Lalinský)

  IMPROVEMENTS:

    * ``pull`` and ``merge`` are much faster at installing bundle format 4.
      (Aaron Bentley)

    * ``pull -v`` no longer includes deltas, making it much faster.
      (Aaron Bentley)

    * ``send`` now sends the directive as an attachment by default.